--- a/boardView/styles/board.css
+++ b/boardView/styles/board.css
@@ -124,7 +124,7 @@ input::placeholder {
 
 .no-task {
   height: 48px;
-  width: 100%;
+  width: 98%;
   background-color: rgb(231, 231, 231);
   border: dashed 1px rgb(163, 163, 163);
   border-radius: 10px;
@@ -134,7 +134,7 @@ input::placeholder {
   align-items: center;
 }
 
-#contentTodo {
+.content {
   width: 100%;
   height: 100%;
   overflow-y: auto;
