--- a/privacyPolicy/styles/privacy-policy.css
+++ b/privacyPolicy/styles/privacy-policy.css
@@ -3,12 +3,14 @@ body {
   flex-direction: row;
   justify-content: center;
 }
+
 .rightSide {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
 main {
   display: flex;
   flex-direction: column;
@@ -19,34 +21,47 @@ main {
 }
 
 .arrow-icon {
-  width:40px;
-  position:fixed;
-  top:260px;
-  right:100px;
+  width: 40px;
+  position: fixed;
+  top: 260px;
+  right: 100px;
 }
 
 h1 {
-  font-size:72px;
-  margin:140px 0px 40px 0px;
-  font-weight:800;
+  font-size: 48px;
+  margin: 140px 0px 40px 0px;
+  font-weight: 600;
 }
+
 h2 {
-  font-size:32px;
-  font-weight:800;
-  margin:10px 0px 20px 0px;
+  font-size: 32px;
+  font-weight: 600;
+  margin: 10px 0px 20px 0px;
 }
+
 h3 {
-  font-size:28px;
-  font-weight:800;
-  margin:0px 0px 20px 0px;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0px 0px 20px 0px;
 }
+
 main p {
-  color:black;
-  font-size:20px;
-  font-weight:500;
-  margin:0px 0px 20px 0px;
-  
+  color: black;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0px 0px 20px 0px;
 }
+
 a {
   text-decoration: none;
+}
+
+.infoPolicy {
+  font-weight: 700;
+}
+
+.link {
+
+  font-size: 48px;
+  font-weight: 800;
 }
