--- a/header-navbar/styles/navbar.css
+++ b/header-navbar/styles/navbar.css
@@ -43,11 +43,18 @@ nav {
   align-items: center;
   justify-content: start;
   padding-left:30%;
-
   width: 70%;
   cursor: pointer;
   gap: 8px;
   height:68px;
+}
+.summery-button p,
+.add-tast-button p,
+.board-button p,
+.contacts-button p{
+  font-size: 20px;
+  font-weight: 300;
+  color: white;
 }
 
 .summery-button:hover,
@@ -69,11 +76,7 @@ nav {
   height: 32px;
 }
 
-p {
-  font-size: 16px;
-  font-weight: 300;
-  color: white;
-}
+
 
 .nav-links {
   display: flex;
