--- a/boardView/styles/board.css
+++ b/boardView/styles/board.css
@@ -121,6 +121,9 @@ input::placeholder {
   align-items: center;
   justify-content: start;
   height: 89.9%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 4px;
 }
 
 .no-task {
@@ -138,5 +141,9 @@ input::placeholder {
 .content {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
 }
