--- a/boardView/styles/boardNote.css
+++ b/boardView/styles/boardNote.css
@@ -2,7 +2,7 @@
 height:240px;
 width:100%;
 border:solid 0.5px rgba(0, 0, 0, 0.1);
-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.15);
+box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.15);
 z-index: 100;
 border-radius:24px;
 display:flex;
@@ -11,7 +11,7 @@ align-items: center;
 }
 .boardNotesContent {
   width:90%;
-  height:200px;
+  height:90%;
 }
 .boardNotesCategory {
   width:140px;
