--- a/addTask/styles/style.css
+++ b/addTask/styles/style.css
@@ -241,3 +241,40 @@
 .cursorPointer {
     cursor: pointer;
 }
+
+.container {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 10px;
+    margin-top: -5px;
+    box-shadow: 0 4px 5px 1px rgba(0, 0, 0, 0.03);
+}
+
+.contact {
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+#contactName {
+    width: 75%;
+    text-align: start;
+}
+
+#initialsOverlay {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    color: white;
+}
