--- a/header-navbar/styles/responsive-navbar.css
+++ b/header-navbar/styles/responsive-navbar.css
@@ -2,9 +2,6 @@
   .logo {
     width: 120px;
   }
-  .menu {
-    margin-top: 120px;
-  }
   p {
     font-size: 16px;
   }
@@ -19,26 +16,47 @@
     font-size: 16px;
   }
 }
+
+
+
 @media (max-width: 1300px) {
   .logo {
     width: 100px;
   }
-  .menu {
-    margin-top: 140px;
-  }
 }
+
+
+
 @media (max-width: 1250px) {
   .logo {
     width: 90px;
   }
+  .summery-button p,
+  .add-tast-button p,
+  .board-button p,
+  .contacts-button p {
+  font-size:20px;
+  }
+  .summery-button,
+  .add-tast-button,
+  .board-button,
+  .contacts-button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    padding-left:20%;
+    width: 80%;
+  }
 }
+
+
+
 @media (max-width: 1150px) {
   .logo {
     width: 80px;
   }
-  .menu {
-    margin-top: 160px;
-  }
+
   p {
     font-size: 14px;
   }
@@ -52,27 +70,59 @@
   .legal-notice {
     font-size: 14px;
   }
+  .summery-button p,
+  .add-tast-button p,
+  .board-button p,
+  .contacts-button p {
+  font-size:18px;
+  }
+  .summery-button,
+.add-tast-button,
+.board-button,
+.contacts-button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  padding-left:20%;
+  width: 80%;
 }
+}
+
+
+
+
+
 
 @media (max-width: 950px) {
   .summery-button,
-  .add-tast-button,
-  .board-button,
-  .contacts-button {
-    padding-left: 40%;
-  }
+.add-tast-button,
+.board-button,
+.contacts-button {
+  padding-left:15%;
+  width: 85%;
 }
+.summery-button p,
+.add-tast-button p,
+.board-button p,
+.contacts-button p {
+font-size:16px;
+}
+}
+
+
+
 @media (max-width: 850px) {
-  .summery-button,
-  .add-tast-button,
-  .board-button,
-  .contacts-button {
-    padding-left: 30%;
-  }
   .logo {
     width: 68px;
     margin-top: 68px;
   }
+  .summery-button p,
+.add-tast-button p,
+.board-button p,
+.contacts-button p {
+font-size:14px;
+}
 }
 
 
