--- a/boardView/styles/overlayAddTask.css
+++ b/boardView/styles/overlayAddTask.css
@@ -16,6 +16,10 @@
   transition: transform 0.5s ease-in-out;
 }
 
+.slide-in {
+  animation: slide-in 0.5s forwards;
+}
+
 @keyframes slide-in {
   from {
     transform: translate(100%, -50%);
