--- a/contactsView/style/overlay.css
+++ b/contactsView/style/overlay.css
@@ -22,19 +22,7 @@
     filter: none!important;
 }
 
-.overlayBody {
-height: 100%;
-width: 100%;
-background-color: red;
-}
-
-.overlayBody {
-height: 100%;
-width: 100%;
-background-color: red;
-}
-
-.overlay-slide-in {
+.slide-in {
     animation: slide-in 1.0s forwards;
 
 }
@@ -59,6 +47,18 @@ background-color: red;
     to {
         transform: translate(100%, -50%);
     }
+}
+
+.overlayBody {
+height: 100%;
+width: 100%;
+background-color: red;
+}
+
+.overlayBody {
+height: 100%;
+width: 100%;
+background-color: red;
 }
 
 .logoDiv {
@@ -278,7 +278,6 @@ background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: orange;
     color: white;
     border-radius: 50%;
     transition: box-shadow 0.3s ease;
