--- a/loginView/styles/style.css
+++ b/loginView/styles/style.css
@@ -3,17 +3,13 @@ body {
     min-height: 100vh;
     font-family: 'Inter', sans-serif;
     margin: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
 }
 
 main {
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
 }
 
 .loginButtons {
@@ -50,7 +46,6 @@ header {
     align-items: start;
     flex-direction: row;
     padding: 40px;
-    width: 90%;
 }
 
 .inputFieldsLogin {
@@ -86,6 +81,8 @@ footer {
     align-items: start;
     flex-direction: row;
     gap: 24px;
+    position: absolute;
+    bottom: 0;
 }
 
 .linkPrivacyPolicy {
