--- a/addTask/styles/style.css
+++ b/addTask/styles/style.css
@@ -6,11 +6,15 @@
 }
 
 .header {
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+}
+
+.headerHeadline {
+    font-size: 55px;
 }
 
 .body {
@@ -20,4 +24,347 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+#addTask {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.task {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.headerText {
+    width: 80%;
+    text-align: start;
+}
+
+.inputFields {
+    width: 80%;
+    height: 44px;
+    border: solid 0.5px rgb(141, 141, 141);
+    border-radius: 10px;
+}
+
+.theLine {
+    width: 1px;
+    height: 80%;
+    background-color: black;
+}
+
+.right-side {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.description {
+    height: 100px;
+    width: 80%;
+    resize: both;
+    padding: 10px;
+    font-size: 16px;
+    border: 0.5px solid rgb(141, 141, 141);
+    border-radius: 10px;
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    line-height: 1.5;
+}
+
+.description::placeholder {
+    position: relative;
+    top: -24px;
+    left: 2px;
+    transform: translateY(-50%);
+    font-size: 20px;
+    color: rgba(128, 128, 128, 0.5);
+    padding: 0;
+    margin: 0;
+}
+
+.containerDescriptionImg {
+    position: relative;
+    top: -3.4%;
+    right: -37%;
+}
+
+.dropDownArrow {
+    position: relative;
+    top: -3.4%;
+    right: -37%;
+    transition: transform 0.3s ease;
+}
+
+.dateCategory {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.calendarIcon {
+    position: relative;
+    top: -29%;
+    right: -36.5%;
+}
+
+.buttons-div p {
+    margin-right: 8px;
+}
+
+.buttons-div {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 40px;
+    gap: 16px;
+}
+
+.buttons-div div:hover {
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
+}
+
+.prio-buttons {
+    width: 80%;
+}
+
+.prioButton {
+    width: 200px;
+    height: 56px;
+    background-color: white;
+    border: solid 0.5px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    cursor: pointer;
+}
+
+.prioButton p {
+    color: black;
+}
+
+.redButton {
+    background-color: rgb(255, 61, 0);
+    border: solid 0.5px rgba(0, 0, 0, 0.1);
+}
+
+.orangeButton {
+    background-color: rgb(255, 168, 0);
+    border: solid 0.5px rgba(0, 0, 0, 0.1);
+    fill: rebeccapurple;
+}
+
+.greenButton {
+    background-color: rgb(122, 226, 41);
+    border: solid 0.5px rgba(0, 0, 0, 0.1);
+}
+
+.whiteText {
+    color: white !important;
+}
+
+.whiteIcon {
+    fill: white;
+}
+
+.category {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#categorySelect {
+    width: 80%;
+    height: 48px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 10px;
+    font-size: 16px;
+    appearance: none;
+}
+
+.dropDowmArrowCategory {
+    position: relative;
+    top: -25%;
+    right: -36%;
+}
+
+.subtasks {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.addSubtasksButton {
+    position: relative;
+    top: -29%;
+    right: -36.4%;
+}
+
+#deleteOrSave {
+    position: relative;
+    top: -30%;
+    right: -33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 8px;
+}
+
+.smallLine {
+    width: 0.5px;
+    height: 25px;
+    background-color: black;
+}
+
+.d_none {
+    display: none !important;
+}
+
+.subtasksContent {
+    width: 80%;
+    height: 150px;
+    margin-top: -44px;
+}
+
+.finalButtons {
+    width: 80%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.cancelBtn {
+    cursor: pointer;
+    width: 120px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    border: 1px solid #2A3647;
+    border-radius: 10px;
+    background: transparent;
+    font-size: 18px;
+    color: #2A3647;
+}
+
+.cancelBtn:hover {
+    background: #29ABE2;
+    border: 1px solid #29abe2;
+    box-shadow: 0px 4px 10px 0px #000000;
+    transition: 0.2s ease;
+}
+
+.createBtn {
+    cursor: pointer;
+    width: 215px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    background-color: #2A3647;
+    border-radius: 10px;
+    color: white;
+    font-size: 19px;
+    white-space: nowrap;
+}
+
+.createBtn:hover {
+    background: #29ABE2;
+    border: 1px solid #29abe2;
+    box-shadow: 0px 4px 10px 0px #000000;
+    transition: 0.2s ease;
+}
+
+.container {
+    width: 80%;
+    max-height: 0;
+    /* Startwert für die Höhe */
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.3);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-top: -5.4px;
+    opacity: 0;
+    /* Startwert für die Deckkraft */
+    transition: max-height 1s ease, opacity 1s ease;
+    /* Animationsdauer */
+}
+
+.container.open {
+    max-height: 300px;
+    /* Endwert für die Höhe */
+    opacity: 1;
+    /* Endwert für die Deckkraft */
+}
+
+.contact {
+    width: 98%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+#initialsOverlay {
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 12px;
+    color: white;
+}
+
+#contactName {
+    width: 80%;
+    text-align: start;
+}
+
+.turnArrow {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease;
+}
+
+@media(max-height: 850px) {
+    .subtasksContent {
+        height: 100px;
+    }
+
+    .header {
+        height: 100px;
+    }
 }
