--- a/splashView/style.css
+++ b/splashView/style.css
@@ -5,25 +5,30 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f3f3f3;
-}
-
-#button{
-    position: absolute;
-    top: 50%;
-    left:70%;
+    background-color: #ffffff;
 }
 
 #logo {
     position: absolute;
-    top: 30%; 
-    left: 43%;
-    transform: translate(0, 0); /*starting position*/
-    opacity: 1;
-    transition: transform 2s ease-in-out, opacity 3s ease-in-out;
+    width: 200px;
+    height: auto;
+    transition: transform 1s ease-in-out;
+    transform-origin: center;
+}
+
+@keyframes logoMove {
+    0% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+    100% {
+        top: 0;
+        left: 0;
+        transform: translate(0, 0) scale(0.4);
+    }
 }
 
 .animate {
-    transform: translate(-100%, -100%) scale(0.5); /*finished position*/
-    opacity: 1;
+    animation: logoMove 1s forwards;
 }
