--- a/addTask/styles/addTaskResponsive.css
+++ b/addTask/styles/addTaskResponsive.css
@@ -1,4 +1,5 @@
 @media(max-width:768px) {
+
 .theLine {
   display:none;
 }
@@ -8,7 +9,6 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 100%;
   margin-top:400px;
 }
 .header {
@@ -19,7 +19,6 @@
 }
 .task {
   width: 100%;
-  height: 120vh;
   margin-top:100px;
 }
 .headerHeadline {
@@ -27,11 +26,11 @@
 }
 .right-side {
   width: 100%;
-  height: 120vh;
 }
 .inputFieldStandart {
   width: 90%;
   height: 44px;
+  margin-bottom:16px;
 }
 .headerText {
   width: 90%;
@@ -54,6 +53,7 @@
 .buttons-div {
   width: 90%;
   gap: 16px;
+  margin-bottom:16px;
 }
 #categorySelect {
   width: 90%;
@@ -68,6 +68,8 @@
 }
 .subtasksContent {
   width: 90%;
+  max-height: 150px;
+  height:0;
 }
 .overlayButtons {
   width: 90%;
@@ -83,6 +85,16 @@
    margin-top:16px;
 }
 }
+@media(min-width:768px) {
+  .body {
+    width: 100%;
+    height: calc(100vh - 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+}
 
 
 /* 
@@ -92,18 +104,3 @@
 
 
 
-#contactName {
-  width: 75%;
-  text-align: start;
-}
-
-#initialsOverlay {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 12px;
-  color: white;
-} */
