--- a/addTask/styles/style.css
+++ b/addTask/styles/style.css
@@ -54,6 +54,11 @@
     height: 44px;
     border: solid 0.5px rgb(141, 141, 141);
     border-radius: 10px;
+    cursor: pointer;
+}
+
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.8); /* Dunkler Hintergrund */
 }
 
 .theLine {
@@ -248,11 +253,13 @@
 .subtasksContent {
     width: 80%;
     height: 150px;
-    margin-top: -44px;
+    margin-top: -18px;
+    overflow-y: auto;
 }
 
 .finalButtons {
     width: 80%;
+    height: 53px;
     display: flex;
     justify-content: end;
     align-items: center;
@@ -307,7 +314,6 @@
 .container {
     width: 80%;
     max-height: 0;
-    /* Startwert für die Höhe */
     display: flex;
     justify-content: start;
     align-items: center;
@@ -318,16 +324,13 @@
     border-bottom-right-radius: 10px;
     margin-top: -5.4px;
     opacity: 0;
-    /* Startwert für die Deckkraft */
     transition: max-height 1s ease, opacity 1s ease;
-    /* Animationsdauer */
 }
 
 .container.open {
-    max-height: 300px;
-    /* Endwert für die Höhe */
+    max-height: 230px;
     opacity: 1;
-    /* Endwert für die Deckkraft */
+    overflow-y: auto;
 }
 
 .contact {
@@ -358,6 +361,119 @@
     transform: rotate(180deg);
     transition: transform 0.3s ease;
 }
+
+.subtaskSingle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+.editDeleteButtons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    gap: 4px;
+}
+
+.editSubtaskDiv {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+.editSubtask {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+.subtaskSingle {
+    width: 100%;
+    height: 35px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    border-radius: 10px;
+  }
+  
+  .subtaskSingle:hover {
+    background-color: darkgray;
+  }
+  
+  .subtaskSingle:hover .editDeleteButtons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-right: 20px;
+    gap: 8px;
+  }
+  
+  .subtaskSingle p {
+    color: black;
+    margin-left: 20px;
+  }
+  
+  .editDeleteButtons {
+    display: none;
+  }
+  
+  .editDeleteButtons:hover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-right: 20px;
+    gap: 8px;
+  }
+  
+  #subtaskInputId {
+    z-index: 1;
+    background-color: transparent;
+  }
+  
+  #deleteOrSave {
+    z-index: 2;
+  }
+
+  .editSubtask {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    position: absolute;
+    top: 80.5%;
+    right: 4.5%;
+  }
+  
+  .editSubtaskDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 8px;
+  }
+  
+  #editInput {
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-bottom: 2px solid transparent;
+    outline: none;
+    text-decoration: none;
+    transition: border-color 0.3s ease;
+    background-color: transparent;
+  }
+  
+  #editInput:focus {
+    border-radius: 0;
+    border-bottom-color: blue;
+  }
 
 @media(max-height: 850px) {
     .subtasksContent {
