--- a/summaryView/styles/standart.css
+++ b/summaryView/styles/standart.css
@@ -90,6 +90,22 @@
    .card {
      flex: 1;
      display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-around;
+     background-color: white;
+     border-radius: 25px;
+     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+     padding: 20px;
+     min-height: 100px;
+     text-align: center;
+     transition: transform 0.2s ease, background-color 0.2s ease;
+     gap: 16px;
+   }
+
+   .cardBottom {
+     flex: 1;
+     display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
@@ -116,7 +132,11 @@
    }
 
    .dateSection {
+     width: 50%;
+     height: 100%;
      display: flex;
+     justify-content: center;
+     align-items: center;
      flex-direction: column;
    }
 
@@ -135,11 +155,11 @@
    }
 
    .urgent-section {
+     width: 50%;
      display: flex;
-     flex-direction: column;
+     flex-direction: row;
      align-items: center;
-     justify-content: center;
-     padding-left: 80px;
+     justify-content: space-around;
    }
 
    .date-section {
@@ -169,9 +189,27 @@
      margin-left: 10px;
    }
 
+   .info {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+   }
+
    @media(min-width: 1350px) {
      .card {
-       width: 300vw;
-       max-width: 250px;
+       width: 200vw;
+       max-width: 200px;
+     }
+   }
+
+   @media(max-width: 1250px) {
+     .card {
+       width: 150vw;
+       max-width: 150px;
+     }
+
+     .middleContainer {
+       width: 400px;
      }
    }
