SummaryView ist komplett fertig LoginView ist fertig Add Task ist Fertig

--- a/header-navbar/styles/header.css
+++ b/header-navbar/styles/header.css
@@ -1,5 +1,10 @@
 .rightSide {
+  height: 100%;
   width: 84%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
 }
 header {
   display: flex;
