--- a/boardView/styles/boardNote.css
+++ b/boardView/styles/boardNote.css
@@ -1,104 +1,148 @@
 .boardNotes {
-height:240px;
-width:100%;
-border:solid 0.5px rgba(0, 0, 0, 0.1);
-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.15);
-z-index: 100;
-border-radius:24px;
-display:flex;
-justify-content: center;
-align-items: center;
-}
-.boardNotesContent {
-  width:90%;
-  height:90%;
-}
-.boardNotesCategory {
-  width:140px;
-  height:28px;
-  background-color:rgb(31, 215, 193);
-  border-radius: 10px;
-  display:flex;
+  height: 240px;
+  width: 100%;
+  border: solid 0.5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.15);
+  z-index: 100;
+  border-radius: 24px;
+  display: flex;
   justify-content: center;
-  align-items:center;
-}
-.taskOverlayCategory p {
-  color:white;
-  font-size:20px;
-  font-weight:300;
-}
-.boardTitle {
-  font-size:16px;
-  font-weight:700;
-  margin:20px 0 8px 0;
-}
-.boardDescription {
-  font-size:16px;
-  color:rgb(179, 179, 179);
-  font-weight:400;
-  margin:8px 0 16px 0;
-}
-#subtask-div {
-  width:100%;
-  margin:8px 0 16px 0;
-  display:flex;
   align-items: center;
-  gap:16px;
 }
+
+.boardNotesContent {
+  width: 90%;
+  height: 90%;
+}
+
+.boardNotesCategory {
+  height: 28px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.categoryText {
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  padding: 6px;
+  padding-inline: 16px;
+}
+
+.taskOverlayCategory p {
+  color: white;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.boardTitle {
+  font-size: 16px;
+  font-weight: 700;
+  margin: 20px 0 8px 0;
+}
+
+.boardDescription {
+  font-size: 12px;
+  color: rgb(179, 179, 179);
+  font-weight: 400;
+  margin: 8px 0 16px 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+#subtask-div {
+  width: 100%;
+  margin: 8px 0 16px 0;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
 .subtaskList {
-  font-size:12px;
-  color:black;
-  font-weight:500;
+  font-size: 12px;
+  color: black;
+  font-weight: 500;
 }
+
 progress {
   width: 60%;
   height: 10px;
   border: 2px solide rgb(255, 255, 255);
-  border-radius: 24px; 
+  border-radius: 24px;
   background-color: rgb(255, 255, 255);
 }
 
 progress::-webkit-progress-bar {
-  background-color:rgb(69, 137, 255);
-  border-radius: 5px; 
+  background-color: rgb(69, 137, 255);
+  border-radius: 5px;
 }
 
 progress::-webkit-progress-value {
-  background-color:rgb(69, 137, 255);
-  border-radius: 5px; 
+  background-color: rgb(69, 137, 255);
+  border-radius: 5px;
 }
 
 progress::-moz-progress-bar {
-  background-color:rgb(69, 137, 255);
-  border-radius: 5px; 
+  background-color: rgb(69, 137, 255);
+  border-radius: 5px;
 }
 
 
 .boardNotesFooter {
-  display:flex;
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  width:100%;
-  margin:8px 0 8px 0;
+  width: 100%;
+  margin: 8px 0 8px 0;
 }
+
 .boardNotesContacts {
-  display:flex;
-  padding-left:8px;
+  display: flex;
+  padding-left: 8px;
 }
-.d {
-  display:flex;
+
+.pofileInitials {
+  position: relative;
+  z-index: 1;
+  margin-left: -9px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
   justify-content: center;
   align-items: center;
   color: white;
-    border-radius: 50%;
-    box-shadow: none;
-    transition: box-shadow 0.3s ease;
-    width:40px;
-    height:40px;
-    background-color: orange;
-    margin-left:-8px;
-    border:solid 0.5px black;
+  font-weight: bold;
 }
+
+.boardNotesContacts span {
+  border-radius: 50%;
+  padding: 8px;
+  color: white;
+  font-size: 12px;
+  border: 1px solid white;
+}
+
+.d {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border-radius: 50%;
+  box-shadow: none;
+  transition: box-shadow 0.3s ease;
+  width: 40px;
+  height: 40px;
+  background-color: orange;
+  margin-left: -8px;
+  border: solid 0.5px black;
+}
+
 .boardNotesPrio {
-  margin-right:16px;
+  margin-right: 16px;
 }
