Summary komplett fertig Add Task komplett fertig Contacts Komplett Fertig Board fehlt nur suchFunktion SubtaskCount drag and drop speichern und overlay

--- a/contactsView/style/contact.css
+++ b/contactsView/style/contact.css
@@ -98,7 +98,7 @@
 
 .singleContactButtons {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: row;
     gap: 16px;
