--- a/contactsView/style/style.css
+++ b/contactsView/style/style.css
@@ -29,8 +29,11 @@
 }
 
 #contactInfoExtendet {
-    width: 100%;
-    height: 79.7%;
+    position: relative; 
+    min-width: 100%;
+    top: 28%;
+    right: -50%;
+    width: 300px;
 }
 
 .phoneNumber {
