--- a/loginView/styles/style.css
+++ b/loginView/styles/style.css
@@ -1,8 +1,11 @@
-body {
+html, body {
     background-color: #F6F7F8;
     min-height: 100vh;
     font-family: 'Inter', sans-serif;
+    height: 100%;
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
@@ -42,7 +45,7 @@ main {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
     align-items: start;
     flex-direction: row;
     padding: 40px;
