--- a/loginView/styles/assets.css
+++ b/loginView/styles/assets.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Lato";
-  src: url("./fonts/Lato/Lato-Regular.ttf") format("ttf"),
-    url("./fonts/Lato/Lato-Regular.ttf") format("ttf");
+  src: url("../../assets/fonts/Lato/Lato-Regular.ttf") format("ttf"),
+    url("../../fonts/Lato/Lato-Regular.ttf") format("ttf");
   font-weight: 400;
   font-style: normal;
 }
