--- a/boardView/styles/boardNote.css
+++ b/boardView/styles/boardNote.css
@@ -1,5 +1,5 @@
 .boardNotes {
-  height: 240px;
+  min-height: 240px;
   width: 100%;
   border: solid 0.5px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.15);
@@ -8,6 +8,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.subtaskLoadingBar {
+  width: 60%;
+  height: 6px;
+  appearance: none;
+}
+
+.subtaskLoadingBar::-webkit-progress-bar {
+  background-color: #e0e0e0;
+}
+
+.subtaskLoadingBar::-webkit-progress-value {
+  background-color: #4589FF;
 }
 
 .boardNotesContent {
@@ -64,6 +78,7 @@
 }
 
 .subtaskList {
+  width:40%;
   font-size: 12px;
   color: black;
   font-weight: 500;
@@ -102,6 +117,8 @@ progress::-moz-progress-bar {
 }
 
 .boardNotesContacts {
+  width: 69%;
+  overflow-x: auto;
   display: flex;
   padding-left: 8px;
 }
