--- a/boardView/styles/noteOverlay.css
+++ b/boardView/styles/noteOverlay.css
@@ -87,7 +87,36 @@
   font-weight: 400;
 }
 
+.contact {
+  width: 90%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: row;
+  gap: 16px;
+  padding-inline: 16px;
+  border-radius: 8px;
+}
 
+.contact:active {
+  background-color: rgb(0, 6, 96);
+  color: white;
+}
+
+.initials {
+  height: 37px;
+  width: 37px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: orange;
+  color: white;
+  border-radius: 50%;
+  box-shadow: none;
+  transition: box-shadow 0.3s ease;
+  font-size: 12px;
+  border: 2px solid white;
+}
 
 .priority-div {
   display: flex;
@@ -125,7 +154,10 @@
   color: black;
   font-weight: 400;
   width: 100%;
-  height: 160px;
+  max-height: 70px;
+  overflow-y: auto;
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -147,7 +179,8 @@
   color: black;
   font-weight: 400;
   width: 100%;
-  height: 120px;
+  max-height: 120px;
+  overflow-y: auto;
 }
 
 .taskOverlay-edit-delete {
