--- a/addTask/styles/addTaskResponsive.css
+++ b/addTask/styles/addTaskResponsive.css
@@ -1,5 +1,40 @@
+@media(max-width:1100px) {
+  .containerDescriptionImg {
+      right: -38%;
+  }
+}
 @media(max-width:768px) {
-
+  .createBtn {
+    width: 180px;
+    height: 60px;
+    font-size: 24px;
+    border:none;
+}
+.prio-buttons {
+  width: 100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+  .cancelBtn {
+    display:none;
+  }
+  #contentArea {
+    width: 100%;
+    height: 100%;
+  }
+  .body {
+    width: 100%;
+    height:100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+.inputFields {
+  width:90%;
+}
 .theLine {
   display:none;
 }
@@ -9,7 +44,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  margin-top:400px;
+  margin-top:800px;
 }
 .header {
   width: 100%;
@@ -19,13 +54,15 @@
 }
 .task {
   width: 100%;
-  margin-top:100px;
+  margin-top:0px;
 }
 .headerHeadline {
  margin:60px 0 0 40px;
 }
 .right-side {
   width: 100%;
+  height:100%;
+  margin-bottom:35%;
 }
 .inputFieldStandart {
   width: 90%;
@@ -40,11 +77,11 @@
   font-weight:500;
 }
 .description {
-  width: 90%;
+  width: 92%;
 }
 .dropDownArrow {
   top: -6.5%;
-  right: -40%;
+  right: -41%;
 }
 .calendar-icon {
   top: -39%;
@@ -56,20 +93,10 @@
   margin-bottom:16px;
 }
 #categorySelect {
-  width: 90%;
-}
-.dropDowmArrowCategory {
-  top: -35%;
-  right: -40%;
-}
-.addSubtasksButton {
-  top: -36%;
-  right: -40%;
+  width: 94%;
 }
 .subtasksContent {
   width: 90%;
-  max-height: 150px;
-  height:0;
 }
 .overlayButtons {
   width: 90%;
@@ -84,20 +111,114 @@
   .contact {
    margin-top:16px;
 }
-}
-@media(min-width:768px) {
-  .body {
-    width: 100%;
-    height: calc(100vh - 100px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
+.finalButtons {
+  margin-top:60px;
+  margin-bottom:140px;
 }
 
 
-/* 
+.containerDescriptionImg {
+  top: -6.4%;
+  right: -43%;
+}
+.calendarIcon {
+  right: -41%;
+}
+.dropDowmArrowCategory {
+  right: -40%;
+}
+.addSubtasksButton {
+  top: -29%;
+  right: -36%;
+}
+
+}
+
+
+@media(max-width:600px) {
+  .right-side {
+    margin-bottom:40%;
+  }
+  #categorySelect {
+    width: 84%;
+  }
+  .inputFields {
+    width:80%;
+  }
+  .description {
+    width: 84%;
+  }
+  .containerDescriptionImg {
+    top: -6.4%;
+    right: -38%;
+  }
+  .dropDownArrow {
+    top: -6.5%;
+    right: -36%;
+  }
+  .calendarIcon {
+    right: -36%;
+  }
+  .dropDowmArrowCategory {
+    right: -36%;
+  }
+  .addSubtasksButton {
+    right: -36%;
+  }
+}
+
+@media(max-width:500px) {
+  .right-side {
+    margin-bottom:50%;
+  }
+}
+
+@media(max-width:400px) {
+  .right-side {
+    margin-bottom:60%;
+  }
+  .containerDescriptionImg {
+    top: -6.4%;
+    right: -37%;
+  }
+}
+
+@media(max-width:340px)
+ {
+  .right-side {
+    margin-bottom:70%;
+  }
+  #categorySelect {
+    width: 78%;
+  }
+  .inputFields {
+    width:72%;
+  }
+  .description {
+    width: 78%;
+  }
+
+
+  .containerDescriptionImg {
+    top: -6.4%;
+    right: -33%;
+  }
+  .dropDownArrow {
+    top: -6.5%;
+    right: -30%;
+  }
+  .calendarIcon {
+    top: -28%;
+    right: -30%;
+  }
+  .dropDowmArrowCategory {
+    right: -30%;
+  }
+  .addSubtasksButton {
+    right: -30%;
+  }
+}
+
 
 
 
