--- a/boardView/styles/boardResponsive.css
+++ b/boardView/styles/boardResponsive.css
@@ -3,7 +3,7 @@
     font-size: 20px;
   }
 }
-@media (max-width: 1050px) {
+@media (max-width: 1150px) {
   .upper-column p {
     font-size: 18px;
   }
@@ -14,6 +14,40 @@
     width: 20px;
     height: 20px;
   }
+  .boardNotes {
+    height: 200px;
+}
+.categoryText {
+  font-size:14px;
+}
+
+
+.categoryText {
+  font-size:12px;
+}
+.boardTitle {
+  font-size: 14px;
+  margin-top:8px;
+}
+
+.boardDescription {
+  margin: 0px 0 0px 0;
+}
+#subtask-div {
+  width: 100%;
+  margin: 12px 0 0px 0;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.boardNotesFooter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 16px 0 8px 0;
+}
+
 }
 @media (max-width: 950px) {
   input {
@@ -28,6 +62,40 @@
   .add-task {
     width: 160px;
   }
+  .boardNotes {
+    height: 180px;
+}
+.categoryText {
+  font-size:13px;
+}
+
+.categoryText {
+  font-size:12px;
+}
+.boardTitle {
+  font-size: 14px;
+  margin-top:8px;
+}
+
+.boardDescription {
+  margin: 0px 0 0px 0;
+}
+#subtask-div {
+  width: 100%;
+  margin: 8px 0 0px 0;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.boardNotesFooter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 8px 0 8px 0;
+}
+
+
 }
 @media (max-width: 860px) {
   input {
@@ -43,14 +111,84 @@
   .upper-column p {
     font-size: 14px;
   }
+  .boardNotes {
+    height: 160px;
 }
+.categoryText {
+  font-size:12px;
+}
+.boardTitle {
+  font-size: 14px;
+  margin-top:8px;
+}
+
+.boardDescription {
+  margin: 0px 0 0px 0;
+}
+#subtask-div {
+  width: 100%;
+  margin: 0px 0 0px 0;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.boardNotesFooter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0px 0 8px 0;
+}
+}
+
+
+
+
+
+
+
 @media (max-width: 768px) {
+
+  body {
+    height:100%;
+    display:flex;
+    flex-direction: column;
+  }
+  .boardNotesFooter {
+    margin-top:40px;
+  }
+  .upper-column {
+    margin: 24px 0 8px 0;
+}
+.boardNotes {
+  width:260px;
+  height:260px;
+  padding: 16px;
+}
+.boardTitle {
+  font-size: 20px;
+}
+.boardDescription {
+  font-size: 16px; 
+}
+#subtask-div {
+  justify-content: space-between;
+  margin-top:40px;
+}
+
+
+.content {
+  flex-direction: row;
+justify-content: start;
+
+ 
+}
   .upper-sec {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 0px;
-    height: 32%;
+    height: 12%;
   }
   .add-task-mobile {
     display: flex;
@@ -95,37 +233,46 @@ input {
   width: 32px;
   height: 32px;
 }
-
-
-
-
-
-
   .lower-sec {
     width: 100%;
+    height:100%;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   .columns {
     width: 100%;
-    height: 100%;
+    height:100%;
     display: flex;
-    flex-direction: column;
+
     margin-left: 1%;
     margin-right: 1%;
   }
   .lower-column {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: start;
-    height: 89.9%;
+    height:60%;
     overflow-y: auto;
     overflow-x: hidden;
-    padding: 4px;
+    padding: 0px;
   }
+  #contentArea {
+    width: 100%;
+    height: 100%;
+    margin-bottom:140px;
 }
+main {
+  height: 100%;
+}
+.input-div {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+}
+
 
 /* body {
   background-color: #F6F7F8;
