--- a/header-navbar/styles/header.css
+++ b/header-navbar/styles/header.css
@@ -53,3 +53,37 @@ h4 {
   font-size: 24px;
   font-weight: 600;
 }
+
+.userDropDown {
+  width:140px;
+  height:160px;
+  background-color:rgb(42, 54, 71);
+  position:absolute;
+  top:100px;
+  right:40px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding:12px;
+}
+.userButton {
+  color:rgb(154, 160, 169);
+  text-decoration: none;
+  width:100%;
+  display:flex;
+  justify-content:center;
+}
+.userButton:hover {
+  background-color:rgb(42, 61, 89);
+}
+
+#userDropDown {
+  display: none; /* Initially hidden */
+}
+
+#userDropDown.active {
+  display: flex; /* Show when active */
+}
