--- a/header-navbar/styles/standart.css
+++ b/header-navbar/styles/standart.css
@@ -13,7 +13,10 @@ body {
 #contentArea {
   width: 100%;
   height: 88%;
-  display: flex;
+display:flex;
+justify-content: center;
+align-items: center;
+margin-bottom:15%;
 }
 
 hr {
